PrimeiraPagina_segundoTeste.html

--- a/PrimeiraPagina_segundoTeste.html
+++ b/PrimeiraPagina_segundoTeste.html
@@ -16,34 +16,35 @@
 
     <section class= "principal"> 
 <div class= "div__principal">
+
         <h1 class= "titulo__principal"> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único. </h1>
         <img class= "imagem__principal"   src = "Minhas Imagens/Combo.png">
-        <a class= "primeiro"  href = "www.alura.com.br" > Assine por 12x de R$ 120,00* </a>
-        <a  class= "primeiro segundo" href="www.alura.com.br" > Assinar somente o Alura+ </a>
+        <a class= "botao__principal"  href = "www.alura.com.br" > Assine por 12x de R$ 120,00* </a>
+        <a  class= "botao__principal segundoBotao__principal" href="www.alura.com.br" > Assinar somente o Alura+ </a>
 
-        <p class= "container"> *O preço pode variar caso a assinatura seja feita em outros planos. </p>
+        <p class= "descricao__principal"> *O preço pode variar caso a assinatura seja feita em outros planos. </p>
 </div>
 </section>
 
-<section class="secundaria">
+<section class="segunda__section">
 
-<img class= "imagem__segundaria" src="Minhas Imagens/Plataformas.png" alt="Imagem Computador com celular">
-<div class= "div__secundaria">
+<img class= "segunda__imagem" src="Minhas Imagens/Plataformas.png" alt="Imagem Computador com celular">
+<div class= "segunda__div">
 
-    <h2 class= "descricao__titulo"> Assista do seu jeito! </h2>
-    <p class= "descricao__container"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+    <h2 class= "segundo__titulo"> Assista do seu jeito! </h2>
+    <p class= "segunda__descricao"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
 
 </div>
 </section>
 
-<section class= "terciaria">
+<section class= "terceira__section">
 
   <div>
-        <p class= "descricao__teciaria"> Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser. </p>
-        <a class= "botao__terciario primeiro" href="www.alura.com.br"> Assine o Combo+ </a>
+        <p class= "terceira__descricao"> Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser. </p>
+        <a class= "terceiro__botao terceira__descricao" href="www.alura.com.br"> Assine o Combo+ </a>
   </div>
 
-    <img class= "imagem__terciaria" src="Minhas Imagens/Telas.png" alt="Imagem de telas">
+    <img class= "terceira__imagem" src="Minhas Imagens/Telas.png" alt="Imagem de telas">
 
 </section>
 <section class= "quarta__section">
@@ -51,16 +52,16 @@
     <img class= "quarta__imagem" src="Minhas Imagens/Notebook.png" alt="Imagem Notebook">
 
  <div class= "quarta__div">
-    <h3 class= "titulo__QuartaPagina"> Baixe seus cursos </h3>
-    <p class= "Quarta__descricao"> Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet. </p> 
+    <h3 class= "quarto__titulo"> Baixe seus cursos </h3>
+    <p class= "quarta__descricao"> Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet. </p> 
  </div>
 </section>
 
-<section class="dispositivos">
+<section class="quinta__section">
 
-    <h2 class="titulo__principal__dispositivo"> Disponível nos seus dispositivos favoritos </h2>
+    <h2 class="quinto__titulo"> Disponível nos seus dispositivos favoritos </h2>
 
-    <ul class="dispositivos__lista">
+    <ul class="lista__principal">
             
         <li>
             <img src="Minhas Imagens/tv.png" alt="Icone de TV">
@@ -81,10 +82,10 @@
 
     <footer class="rodape">
 
-    <section class="ultima__section">
-            <img class="ultima__imagem" src="Minhas Imagens/Logo.png" alt="Alura+">
+    <section class="sexta__sextion">
+            <img class="sexta__imagem" src="Minhas Imagens/Logo.png" alt="Alura+">
 
-        <ul class="ultima__lista"> 
+        <ul class="sexta__lista"> 
             <li>
                 <a class="descricao__elemento"  href="www.alura.com"> Idioma </a>
             </li>
@@ -114,8 +115,8 @@
             </li>
         </ul>
 
-        <p class="ultima__descricao"> ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade. </p>
-        <p class="ultima__descricao"> Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33 </p>
+        <p class="sexta__descricao"> ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade. </p>
+        <p class="sexta__descricao"> Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33 </p>
 
     </section>
 </footer>
